Added and deleted publications

--- a/content/publication/tpcxai-on-jetsons/cite.bib
+++ b/content/publication/tpcxai-on-jetsons/cite.bib
@@ -1,8 +1,16 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{bayerTPCxAINVIDIAJetsons2023,
+  title = {{{TPCx-AI}} on~{{NVIDIA Jetsons}}},
+  booktitle = {Performance {{Evaluation}} and {{Benchmarking}}},
+  author = {Bayer, Robert and T{\o}ttrup, Jon Voigt and T{\"o}z{\"u}n, P{\i}nar},
+  editor = {Nambiar, Raghunath and Poess, Meikel},
+  year = {2023},
+  series = {Lecture {{Notes}} in {{Computer Science}}},
+  pages = {49--66},
+  publisher = {{Springer Nature Switzerland}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-031-29576-8_4},
+  abstract = {Despite their resource- and power-constrained nature, edge devices also exhibit an increase in the available compute and memory resources and heterogeneity, similar to the evolution of server hardware in the past decade. For example, NVIDIA Jetson devices have a system-on-chip (SoC) composed of an ARM CPU and an NVIDIA GPU sharing RAM that could be up to 32~~GB. Such an SoC setup offers opportunities to push down complex computations closer to the data source rather than performing them on remote servers.},
+  isbn = {978-3-031-29576-8},
+  langid = {english},
+  keywords = {edge devices,IoT,machine learning,performance benchmark,resource-aware,resource-constrained,system-on-chip,TPCx-AI}
 }
