Updated the DEEM citation

--- a/content/publication/reaching-edge-of-edge/cite.bib
+++ b/content/publication/reaching-edge-of-edge/cite.bib
@@ -1,16 +1,17 @@
-@article{bayerReachingEdgeEdge2023,
-  title = {Reaching the {{Edge}} of the {{Edge}}: {{Image Analysis}} in {{Space}}},
-  shorttitle = {Reaching the {{Edge}} of the {{Edge}}},
-  author = {Bayer, Robert and Priest, Julian and T{\"o}z{\"u}n, P{\i}nar},
-  year = {2023},
-  month = jun,
-  number = {arXiv:2301.04954},
-  eprint = {2301.04954},
-  primaryclass = {cs},
-  publisher = {{arXiv}},
-  doi = {10.48550/arXiv.2301.04954},
-  urldate = {2023-09-06},
-  abstract = {Satellites have become more widely available due to the reduction in size and cost of their components. As a result, there has been an advent of smaller organizations having the ability to deploy satellites with a variety of data-intensive applications to run on them. One popular application is image analysis to detect, for example, land, ice, clouds, etc. for Earth observation. However, the resource-constrained nature of the devices deployed in satellites creates additional challenges for this resource-intensive application. In this paper, we present our work and lessons-learned on building an Image Processing Unit (IPU) for a satellite. We first investigate the performance of a variety of edge devices (comparing CPU, GPU, TPU, and VPU) for deep-learning-based image processing on satellites. Our goal is to identify devices that can achieve accurate results and are flexible when workload changes while satisfying the power and latency constraints of satellites. Our results demonstrate that hardware accelerators such as ASICs and GPUs are essential for meeting the latency requirements. However, state-of-the-art edge devices with GPUs may draw too much power for deployment on a satellite. Then, we use the findings gained from the performance analysis to guide the development of the IPU module for an upcoming satellite mission. We detail how to integrate such a module into an existing satellite architecture and the software necessary to support various missions utilizing this module.},
-  archiveprefix = {arxiv},
-  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Performance}
+@inproceedings{10.1145/3650203.3663330, 
+    author = {Bayer, Robert and Priest, Julian and T\"{o}z\"{u}n, Pinar}, 
+    title = {Reaching the Edge of the Edge: Image Analysis in Space}, 
+    year = {2024}, 
+    isbn = {9798400706110}, 
+    publisher = {Association for Computing Machinery}, 
+    address = {New York, NY, USA}, 
+    url = {https://doi.org/10.1145/3650203.3663330}, 
+    doi = {10.1145/3650203.3663330}, 
+    abstract = {Satellites have become more widely available due to the reduction in size and cost of their components. As a result, there has been an advent of smaller organizations having the ability to deploy satellites with a variety of data-intensive applications to run on them. One popular application is image analysis to detect, for example, land, ice, clouds, etc. for Earth observation. However, the resource-constrained nature of the devices deployed in satellites creates additional challenges for this resource-intensive application.In this paper, we present our work and lessons-learned on building an Image Processing Unit (IPU) for this satellite. We first highlight the resource constraints based on a deployed satellite performing machine learning on satellite imagery in orbit, including the required latency, power budget, and the network bandwidth limitations driving the need for such a solution. We then investigate the performance of a variety of edge devices (comparing CPU, GPU, TPU, and VPU) for deep-learning-based image processing on satellites. Our goal is to identify devices that are flexible when the workload changes while satisfying the power and latency constraints of satellites. Our results demonstrate that hardware accelerators such as ASICs and GPUs are essential for meeting the latency requirements. However, state-of-the-art edge devices with GPUs may draw too much power for deployment on a satellite.}, 
+    booktitle = {Proceedings of the Eighth Workshop on Data Management for End-to-End Machine Learning}, 
+    pages = {29–38}, 
+    numpages = {10}, 
+    keywords = {earth observation, edge computing, image data analysis, internet of things, machine learning, satellites}, 
+    location = {, Santiago, AA, Chile, }, 
+    series = {DEEM '24} 
 }
